package Cardinalidad;

public class Libro {
    private String nombre;

    public Libro(String nombre){
        this.nombre = nombre;
    }

    public String getNombre(){
        return nombre;
    }
}
